--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
         </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item dropdown">
-                    <a class="nav-link link text-black display-4" href="#">Home</a>
+                    <a class="nav-link link text-black text-primary display-4" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-black display-4" href="#">
+                    <a class="nav-link link text-black text-primary display-4" href="index.html#callToAction2-e">
                         Life Couch</a>
                 </li>
                 <li class="nav-item">
@@ -87,7 +87,7 @@
                   <div class="mbr-figure">
                         <div class="mbr-media show-modal align-center" data-modal=".modalWindow">
                             <div class="anim">
-                             <span class="mbr-iconfont mobi-mbri-play mobi-mbri"></span>
+                             <a href="index.html"><span class="mbr-iconfont mobi-mbri-play mobi-mbri"></span></a>
                                 </div>
                             </div>
                                 <p class="popup__text mbr-bold mbr-fonts-style display-4">Play Promo</p>
